plugins {
    id 'java'
}

group 'org.nmslib.hnswlib'
version '1.0-SNAPSHOT'

java.toolchain.languageVersion = JavaLanguageVersion.of(20)

dependencies {
    testRuntimeOnly platform('org.junit:junit-bom:5.9.2')
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'

    testImplementation platform('org.junit:junit-bom:5.9.2')
    testImplementation platform('org.mockito:mockito-bom:5.2.0')

}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
}

